--- a/monolith/TacoTruck/TacoTruck/client-src/app/home/home.component.html
+++ b/monolith/TacoTruck/TacoTruck/client-src/app/home/home.component.html
@@ -1,3 +1,12 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <md-card>
+    <md-card-header>
+      <md-card-title>
+        <h1>Taco Truck - Monolith Edition</h1>
+      </md-card-title>
+    </md-card-header>
+    <md-card-content>
+      <p>Welcome to Taco Truckr, the ultimate Taco Truck related demo app.</p>
+    </md-card-content>
+  </md-card>
+</div>
